--- a/PDF_Title_to_Filename/App.xaml
+++ b/PDF_Title_to_Filename/App.xaml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Application x:Class="PdfTitleRenamer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:converters="clr-namespace:PdfTitleRenamer.Converters">
     <Application.Resources>
         <ResourceDictionary>
+            <!-- コンバーター -->
+            <converters:LanguageToggleConverter x:Key="LanguageToggleConverter"/>
+            
+            <!-- シンプルなスタイル -->
             <!-- シンプルなスタイル -->
             <Style x:Key="MainButton" TargetType="Button">
                 <Setter Property="Padding" Value="15,8"/>
